[package]
name = "nour"
version = "1.0.0"
edition = "2024"
license = "Open BSV"
description = "High-performance Bitcoin SV toolkit for transactions, scripts, P2P, and wallets"
repository = "https://github.com/murphsicles/nour"
keywords = ["bitcoin-sv", "blockchain", "crypto", "transactions", "p2p"]
categories = ["cryptography", "network-programming"]
readme = "README.md"

[dependencies]
base58 = "0.2.0" # Address encoding
bitcoin_hashes = "0.17.0" # Required for SHA256/Hash160
byteorder = "1.5.0" # LE/BE read/write
dns-lookup = "3.0.1" # DNS seed resolution
hex = "0.4.3" # Hex encoding
linked-hash-map = "0.5.6" # LinkedHashMap for tx validation
log = "0.4.28" # Logging
murmur3 = "0.5.2" # Required for bloom filters
num-bigint = "0.4.6" # Big int arithmetic
num-traits = "0.2.19" # Numeric traits for num-bigint
rand = "0.9.2" # Key generation, nonces
ripemd = "0.1.3" # Ripemd160 for script
secp256k1 = { version = "0.31.1", features = ["rand", "global-context"] } # ECDSA
snowflake = "1.3.0" # Retain for IDs
tokio = { version = "1.48.0", features = ["net", "rt"], optional = true } # Async P2P

[dev-dependencies]
cargo-fuzz = "0.13.1" # Fuzzing
criterion = { version = "0.7.0", features = ["html_reports"] } # Benchmarks
hex_literal = "0.4" # Convert hex strings to a byte arrays
pretty_assertions = "1.4.1" # Enhanced assertions
rand = "0.9.2" # Test utilities

[features]
async = ["tokio"] # Enable async P2P

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
